--- a/AvaHTMLTemplate/index.html
+++ b/AvaHTMLTemplate/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Mercy rules she sso cool  HTML5 UP</title>
+		<title>All About Me</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -22,7 +22,7 @@
 					<h1 id="logo"><a href="index.html">Ava<span>by Me</span></a></h1>
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="index.html">Hi Claudia</a></li>
+							<li class="current"><a href="index.html">Hi Visitor</a></li>
 							<li class="submenu">
 								<a href="#">Layouts</a>
 								<ul>
@@ -59,13 +59,13 @@
 					<div class="inner">
 
 						<header>
-							<h2>TWENTY</h2>
+							<h2>MERCY</h2>
 						</header>
-						<p>This is <strong>Twenty</strong>, a free
+						<p>This is <strong>Mercy</strong>, I want
 						<br />
-						responsive template
+						to tell you about
 						<br />
-						by <a href="http://html5up.net">HTML5 UP</a>.</p>
+						by <a href="https://www.facebook.com/mercyantwan">Myself</a>.</p>
 						<footer>
 							<ul class="buttons vertical">
 								<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
@@ -81,15 +81,15 @@
 
 					<header class="special container">
 						<span class="icon fa-bar-chart-o"></span>
-						<h2>As this is my <strong>twentieth</strong> freebie for HTML5 UP
+						<h2>As this is my <strong>First</strong> time away from my home country
 						<br />
-						I decided to give it a really creative name.</h2>
-						<p>Turns out <strong>Twenty</strong> was the best I could come up with. Anyway, lame name aside,
+						I decided to share my thoughts about how it feels.</h2>
+						<p>Turns out <strong>One year</strong> has passed without me realizing it!
 						<br />
-						it's minimally designed, fully responsive, built on HTML5/CSS3/<strong>skel</strong>,
-						and, like all my stuff,
+						It has been a great year with new experiences and I learned a lot! As I started to <strong>adopt</strong>,
+						the new enviroment,
 						<br />
-						released for free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0</a> license. Have fun!</p>
+						the more I miss my home country! <a href="https://en.wikipedia.org/wiki/Ethiopia">Ethiopia!</a> license.</p>
 					</header>
 
 					
