--- a/AvaHTMLTemplate/index.html
+++ b/AvaHTMLTemplate/index.html
@@ -65,7 +65,7 @@
 						<br />
 						to tell you about
 						<br />
-						by <a href="https://www.facebook.com/mercyantwan">Myself</a>.</p>
+						<a href="https://www.facebook.com/mercyantwan">Myself</a>.</p>
 						<footer>
 							<ul class="buttons vertical">
 								<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
