--- a/AvaHTMLTemplate/index.html
+++ b/AvaHTMLTemplate/index.html
@@ -89,7 +89,7 @@
 						It has been a great year with new experiences and I learned a lot! As I started to <strong>adopt</strong>,
 						the new enviroment,
 						<br />
-						the more I miss my home country! <a href="https://en.wikipedia.org/wiki/Ethiopia">Ethiopia!</a> license.</p>
+						the more I miss my home country! <a href="https://en.wikipedia.org/wiki/Ethiopia">Ethiopia!</a> </p>
 					</header>
 
 					
