deleted and added elements

--- a/AvaHTMLTemplate/index.html
+++ b/AvaHTMLTemplate/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>All About Me</title>
+		<title>All About Ethiopia</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -61,11 +61,11 @@
 						<header>
 							<h2>MERCY</h2>
 						</header>
-						<p>This is <strong>Mercy</strong>, I want
+						<p>This is <strong>"Fun Facts"</strong>, About
 						<br />
-						to tell you about
+						The Country
 						<br />
-						<a href="https://www.facebook.com/mercyantwan">Myself</a>.</p>
+						<a href="https://en.wikipedia.org/wiki/Ethiopia">Ethiopia</a>.</p>
 						<footer>
 							<ul class="buttons vertical">
 								<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
