--- a/AvaHTMLTemplate/index.html
+++ b/AvaHTMLTemplate/index.html
@@ -59,7 +59,7 @@
 					<div class="inner">
 
 						<header>
-							<h2>MERCY</h2>
+							<h2>Did You Know?</h2>
 						</header>
 						<p>This is <strong>"Fun Facts"</strong>, About
 						<br />
