changed the header

--- a/AvaHTMLTemplate/index.html
+++ b/AvaHTMLTemplate/index.html
@@ -81,16 +81,11 @@
 
 					<header class="special container">
 						<span class="icon fa-bar-chart-o"></span>
-						<h2>As this is my <strong>First</strong> time away from my home country
-						<br />
-						I decided to share my thoughts about how it feels.</h2>
-						<p>Turns out <strong>One year</strong> has passed without me realizing it!
-						<br />
-						It has been a great year with new experiences and I learned a lot! As I started to <strong>adopt</strong>,
-						the new enviroment,
-						<br />
-						the more I miss my home country! <a href="https://en.wikipedia.org/wiki/Ethiopia">Ethiopia!</a> </p>
-					</header>
+						<h2>Ethiopia is <strong>7.5 Years</strong> behind the United Kingdom
+						<br /></h2>
+						<p>This is because Ethiopia is the <strong> only
+						</strong> country in the world to have 13 months in a year. Ethiopians also celebrate New Year in <strong> September</strong>, meaning that they are currently only a couple of months into the year 2008
+								</header>
 
 					
 
