--- a/AvaHTMLTemplate/index.html
+++ b/AvaHTMLTemplate/index.html
@@ -33,6 +33,7 @@
 									<li class="submenu">
 										<a href="#">Submenu</a>
 										<ul>
+							<li class="current"><a href="index.html">Hi Visitor 2</a></li>
 							<li class="submenu">
 								<a href="#">Layouts 2</a>
 								<ul>
