edited h1 and layout

--- a/AvaHTMLTemplate/index.html
+++ b/AvaHTMLTemplate/index.html
@@ -19,11 +19,12 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1 id="logo"><a href="index.html">Ava<span>by Me</span></a></h1>
+					<h1 id="logo"><a href="index.html">Visit<span>Ethiopia</span></a></h1>
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html">Hi Visitor</a></li>
 							<li class="submenu">
+								<a href="#">Layouts</a>
 								<a href="#">Layouts</a>
 								<ul>
 									<li><a href="left-sidebar.html">Left Sidebar</a></li>
