--- a/AvaHTMLTemplate/index.html
+++ b/AvaHTMLTemplate/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>All About Ethiopia! Funny Facts!</title>
+		<title>All About Ethiopia! NOT FUNNY Facts!</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -25,7 +25,9 @@
 							<li class="current"><a href="index.html">Hi Visitor</a></li>
 							<li class="submenu">
 								<a href="#">Layouts</a>
-								<a href="#">Layouts</a>
+								<a href="#">History</a>
+								<a href="#">Natural Features</a>
+								<a href="#">Where to stay</a>
 								<ul>
 									<li><a href="left-sidebar.html">Left Sidebar</a></li>
 									<li><a href="right-sidebar.html">Right Sidebar</a></li>
