--- a/AvaHTMLTemplate/index.html
+++ b/AvaHTMLTemplate/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>All About Ethiopia! NOT FUNNY Facts!</title>
+		<title>All About Ethiopia!  Facts!</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,7 +19,7 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1 id="logo"><a href="index.html">Visit<span>Ethiopia</span></a></h1>
+					<h1 id="logo"><a href="index.html"> LOVE TO Visit<span>Ethiopia</span></a></h1>
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html">Hi Visitor</a></li>
