--- a/AvaHTMLTemplate/index.html
+++ b/AvaHTMLTemplate/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>All About Ethiopia!  Facts!</title>
+		<title>All About Ethiopia!</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,7 +19,7 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1 id="logo"><a href="index.html"> LOVE TO Visit<span>Ethiopia</span></a></h1>
+					<h1 id="logo"><a href="index.html"> LOVE TO Visit<span> Ethiopia</span></a></h1>
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html">Hi Visitor</a></li>
@@ -36,17 +36,8 @@
 									<li class="submenu">
 										<a href="#">Submenu</a>
 										<ul>
-							<li class="current"><a href="index.html">Hi Visitor 2</a></li>
-							<li class="submenu">
-								<a href="#">Layouts 2</a>
-								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li class="submenu">
-										<a href="#">Submenu</a>
-										<ul>
+							
+							
 											<li><a href="#">Dolore Sed</a></li>
 											<li><a href="#">Consequat</a></li>
 											<li><a href="#">Lorem Magna</a></li>
