--- a/AvaHTMLTemplate/index.html
+++ b/AvaHTMLTemplate/index.html
@@ -29,9 +29,9 @@
 								<a href="#">Natural Features</a>
 								<a href="#">Where to stay</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="left-sidebar.html">History</a></li>
+									<li><a href="right-sidebar.html">Places to Visit</a></li>
+									<li><a href="no-sidebar.html">Hotels and Resorts</a></li>
 									<li><a href="contact.html">Contact</a></li>
 									<li class="submenu">
 										<a href="#">Submenu</a>
