--- a/AvaHTMLTemplate/index.html
+++ b/AvaHTMLTemplate/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>All About Ethiopia!</title>
+		<title>Few Facts About Ethiopia!</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,20 +19,16 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1 id="logo"><a href="index.html"> LOVE TO Visit<span> Ethiopia</span></a></h1>
+					<h1 id="logo"><a href="index.html"> Would you like to<span> Visit?</span></a></h1>
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html">Hi Visitor</a></li>
 							<li class="submenu">
-								<a href="#">Layouts</a>
 								<a href="#">History</a>
 								<a href="#">Natural Features</a>
+								<a href="#">Places to Visit</a>
 								<a href="#">Where to stay</a>
 								<ul>
-									<li><a href="left-sidebar.html">History</a></li>
-									<li><a href="right-sidebar.html">Places to Visit</a></li>
-									<li><a href="no-sidebar.html">Hotels and Resorts</a></li>
-									<li><a href="contact.html">Contact</a></li>
 									<li class="submenu">
 										<a href="#">Submenu</a>
 										<ul>
@@ -47,7 +43,7 @@
 									</li>
 								</ul>
 							</li>
-							<li><a href="#" class="button special">Sign Up</a></li>
+							<li><a href="#" class="button special">Book a tour</a></li>
 						</ul>
 					</nav>
 				</header>
