added the submenu

--- a/AvaHTMLTemplate/index.html
+++ b/AvaHTMLTemplate/index.html
@@ -22,7 +22,8 @@
 					<h1 id="logo"><a href="index.html"> Would you like to<span> Visit?</span></a></h1>
 					<nav id="nav">
 						<ul>
-							
+							<li class="current"><a href="index.html">Hi Visitor</a></li>
+							<li class="submenu">
 								<a href="#">History</a>
 								<a href="#">Natural Features</a>
 								<a href="#">Places to Visit</a>
