--- a/AvaHTMLTemplate/index.html
+++ b/AvaHTMLTemplate/index.html
@@ -30,15 +30,13 @@
 								<a href="#">Where to stay</a>
 								<ul>
 									<li class="submenu">
-										<a href="#">Submenu</a>
+										<a href="#"> </a>
 										<ul>
 							
 							
-											<li><a href="#">Dolore Sed</a></li>
-											<li><a href="#">Consequat</a></li>
-											<li><a href="#">Lorem Magna</a></li>
-											<li><a href="#">Sed Magna</a></li>
-											<li><a href="#">Ipsum Nisl</a></li>
+											<li><a href="#">Religion</a></li>
+											<li><a href="#">Culture</a></li>
+											<li><a href="#">Language</a></li>
 										</ul>
 									</li>
 								</ul>
