--- a/AvaHTMLTemplate/index.html
+++ b/AvaHTMLTemplate/index.html
@@ -30,7 +30,7 @@
 								<a href="#">Where to stay</a>
 								<ul>
 									<li class="submenu">
-										<a href="#"> </a>
+										<a href="#"> the history</a>
 										<ul>
 							
 							
