--- a/AvaHTMLTemplate/index.html
+++ b/AvaHTMLTemplate/index.html
@@ -98,9 +98,8 @@
 										<header>
 											<h3>This is Something</h3>
 										</header>
-										<p>No Trading Fees<br>
-											No Bank Transfer Deposit Fees<br>
-											No Bitcoin Transfer Fees</p>
+										<p>The only country in Africa to have their own letters<br>
+											Their own numeric patterns<br></p>
 									</section>
 
 								</div>
@@ -111,9 +110,9 @@
 										<header>
 											<h3>Also Something</h3>
 										</header>
-										<p>3-Factor Authentication<br>
-										100% of funds held in cold storage<br>
-										Does not operate a fractional reserve</p>
+										<p>One of the two countries never to be colonized<br>
+										Defeated Italy in 1896<br>
+										</p>
 									</section>
 
 								</div>
@@ -124,7 +123,7 @@
 										<header>
 											<h3>Probably Something</h3>
 										</header>
-										<p>Real time processing of deposits and withdrawals</p>
+										<p>Patriotism is in their blood</p>
 									</section>
 
 								</div>
