added pictures and paragraphs

--- a/AvaHTMLTemplate/index.html
+++ b/AvaHTMLTemplate/index.html
@@ -123,7 +123,7 @@
 										<header>
 											<h3>Probably Something</h3>
 										</header>
-										<p>Patriotism is in their blood</p>
+										<p>Coffee was first found in Ethiopia</p>
 									</section>
 
 								</div>
@@ -143,20 +143,20 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/travel1.jpeg" alt="" /></a>
 										<header>
-											<h3>A Really Fast Train</h3>
+											<h3>Coffee!</h3>
 										</header>
-										<p>This really fast train will take you to anywhere in Europe.  It's easy to travel with train. </p>
+										<p>The coffee ceremony starts from scratch, roasting the beans.</p>
 									</section>
 
 								</div>
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/travel2.jpeg" alt="" /></a>
+										<a href="#" class="image featured"><img src="http://1.bp.blogspot.com/-vJfRkxG1a5k/T-FMKQXc65I/AAAAAAAAEu8/IPQDgBzKf9c/s1600/Injera.png" alt="" /></a>
 										<header>
-											<h3>An Airport Terminal</h3>
+											<h3>"Injera" is the staple and indigenous food</h3>
 										</header>
-										<p>There are many airport terminals.</p>
+										<p>Very healthy and now getting popular throughout the world</p>
 									</section>
 
 								</div>
