added pictures and paragraph

--- a/AvaHTMLTemplate/index.html
+++ b/AvaHTMLTemplate/index.html
@@ -141,7 +141,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/travel1.jpeg" alt="" /></a>
+										<a href="#" class="image featured"><img src="https://advocacy4oromia.files.wordpress.com/2015/05/roasting-coffee_z.jpg" alt="" /></a>
 										<header>
 											<h3>Coffee!</h3>
 										</header>
@@ -165,11 +165,11 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/travel3.jpeg" alt="" /></a>
+										<a href="#" class="image featured"><img src="https://i.ytimg.com/vi/HBq_zOzhTqw/maxresdefault.jpg" alt="" /></a>
 										<header>
-											<h3>Hyperspace Travel</h3>
+											<h3>Rock-Hewn Churches</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+										<p>Famous for being monolithic rock-cut</p>
 									</section>
 
 								</div>
