--- a/AvaHTMLTemplate/index.html
+++ b/AvaHTMLTemplate/index.html
@@ -201,12 +201,12 @@
 
 					<header>
 						<h2>Ready to do <strong>something</strong>?</h2>
-						<p>Proin a ullamcorper elit, et sagittis turpis integer ut fermentum.</p>
+						<p>You will absolutely love to see it all in person</p>
 					</header>
 					<footer>
 						<ul class="buttons">
-							<li><a href="#" class="button special">Take My Money</a></li>
-							<li><a href="#" class="button">LOL Wut</a></li>
+							<li><a href="#" class="button special">Book for trip</a></li>
+							<li><a href="#" class="button">Invite friends</a></li>
 						</ul>
 					</footer>
 
