--- a/AvaHTMLTemplate/index.html
+++ b/AvaHTMLTemplate/index.html
@@ -64,7 +64,8 @@
 						<br />
 						The Country
 						<br />
-						<a href="https://en.wikipedia.org/wiki/Ethiopia">Ethiopia</a>.</p>
+						<a href="https://en.wikipedia.org/wiki/Ethiopia"
+						target="_blank">Ethiopia</a>.</p>
 						<footer>
 							<ul class="buttons vertical">
 								<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
